first working bucalemu-node-match-images-server

--- a/bucalemu-cordova-match-images/www/index.html
+++ b/bucalemu-cordova-match-images/www/index.html
@@ -22,6 +22,7 @@
     </div>
 
     <div id="takePictureDiv">
+      <button id="uploadButton">Subir</button>
       <button id="takePictureButton">Fotografiar</button>
     </div>
 
